# laboraid-rate-engine

./: .gitignore  BUILD_INSTRUCTIONS.md  CDK_SYNC_FIX.md  DEPLOY_FREEZE.md  PUSH_INSTRUCTIONS.md  README.md  pyproject.toml
agents/extractor/: Dockerfile  agent.py  extract_generic.py  pyproject.toml  steering.py  system-prompt.md
agents/extractor/tests/: test_extract_generic.py  test_system_prompt.py
agents/improver/: Dockerfile  agent.py  pyproject.toml
agents/profile_drafter/: .gitignore  Dockerfile  agent.py  analyze.py  codegen_check.py  commit_helper.py  draft_extractor.py  draft_profile.py  iterate.py  orchestrate.py  pyproject.toml  schema_check.py  steering.py  system-prompt.md  validate.py
agents/profile_drafter/tests/: test_agent.py  test_analyze_groundtruth.py  test_codegen_check.py  test_commit_helper.py  test_draft_extractor.py  test_draft_profile.py  test_iterate.py  test_orchestrate_smoke.py  test_schema_check.py  test_system_prompt.py  test_validate.py
cdk/: .gitignore  .gitkeep  README.md  RECONCILIATION.md  app.py  cdk.json  pyproject.toml
cdk/assets/schema_init/: handler.py  schema.sql
cdk/laboraid_cdk/: __init__.py
cdk/laboraid_cdk/aspects/: __init__.py  mandatory_tags.py
cdk/laboraid_cdk/config/: __init__.py  dev.py  prod.py
cdk/laboraid_cdk/constructs/: __init__.py  sns_topic_with_subs.py  strands_agent.py  tagged_bucket.py  tagged_lambda.py
cdk/laboraid_cdk/sfn/: __init__.py  main_pipeline.py
cdk/laboraid_cdk/stacks/: __init__.py  ai_stack.py  api_stack.py  observability_stack.py  orchestration_stack.py  processing_stack.py  security_stack.py  storage_stack.py  ui_stack.py  validation_stack.py
cdk/laboraid_cdk/util/: __init__.py  naming.py
cdk/layers/synth-deps/: requirements.txt
cdk/reconciliation/: CODE_AUDIT.md  DIFF_REVIEW.md  PHASE3_EXECUTION.md  iam_inline_policies.json  new_lambda_configs.json  sfn_definition.json  spa-config.reference.json
cdk/reconciliation/diffs/: ai.diff  api.diff  orchestration.diff  processing.diff  storage.diff  validation.diff
cdk/reconciliation/rollback/: fn_batch-planner.json  fn_batch-process.json  fn_ocr-preprocess.json  fn_profile-builder.json  fn_synth-publish.json  fn_synthesizer.json  role_Laboraid-dev-Api-ProfileListServiceRoleDE290050-yUbjfein1Uja.json  role_Laboraid-dev-Api-ProfileListServiceRoleDE290050-yUbjfein1Uja_inline_ProfileListServiceRoleDefaultPolicy48F496E5.json  role_Laboraid-dev-Api-ProfileListServiceRoleDE290050-yUbjfein1Uja_inline_rds-data-profiles.json  role_Laboraid-dev-Api-ProfileUpdateServiceRoleCC284331-2TQ4VOPeIdHX.json  role_Laboraid-dev-Api-ProfileUpdateServiceRoleCC284331-2TQ4VOPeIdHX_inline_ProfileUpdateServiceRoleDefaultPolicy132955F9.json  role_Laboraid-dev-Api-ProfileUpdateServiceRoleCC284331-2TQ4VOPeIdHX_inline_rds-data-profiles.json  role_Laboraid-dev-Orchestration-MainPipelineRoleA9C3BACF-26noyayZRrx0.json  role_Laboraid-dev-Orchestration-MainPipelineRoleA9C3BACF-26noyayZRrx0_inline_MainPipelineRoleDefaultPolicyCE271BF9.json  role_Laboraid-dev-Orchestration-MainPipelineRoleA9C3BACF-26noyayZRrx0_inline_invoke-batch-planner.json  role_Laboraid-dev-Orchestration-MainPipelineRoleA9C3BACF-26noyayZRrx0_inline_invoke-ocr-preprocess.json  role_Laboraid-dev-Orchestration-MainPipelineRoleA9C3BACF-26noyayZRrx0_inline_invoke-synthesizer.json  role_Laboraid-dev-Processing-LlmExtractorServiceRole5953-7yv71qdkhE6t.json  role_Laboraid-dev-Processing-LlmExtractorServiceRole5953-7yv71qdkhE6t_inline_LlmExtractorServiceRoleDefaultPolicy98A9102E.json  role_Laboraid-dev-Processing-LlmExtractorServiceRole5953-7yv71qdkhE6t_inline_invoke-profile-builder.json  role_Laboraid-dev-Processing-LlmExtractorServiceRole5953-7yv71qdkhE6t_inline_rds-data-profiles.json  role_Laboraid-dev-Processing-PublisherServiceRoleF4D9160-pIWdJodezP0q.json  role_Laboraid-dev-Processing-PublisherServiceRoleF4D9160-pIWdJodezP0q_inline_PublisherServiceRoleDefaultPolicy0E21E942.json  role_Laboraid-dev-Processing-PublisherServiceRoleF4D9160-pIWdJodezP0q_inline_file-hashes-rw.json  role_Laboraid-dev-Processing-PublisherServiceRoleF4D9160-pIWdJodezP0q_inline_inputs-bucket-head.json  role_Laboraid-dev-Processing-PublisherServiceRoleF4D9160-pIWdJodezP0q_inline_invoke-xlsx-renderer.json  role_Laboraid-dev-Processing-PublisherServiceRoleF4D9160-pIWdJodezP0q_inline_publisher-outputs-write-hotfix.json  rule_input_uploaded.json  sfn_main.json
cdk/tests/: test_mandatory_tags.py  test_naming.py  test_stacks.py  test_strands_agent.py
kernel/: DESIGN.md  README.md  SETUP.md  pyproject.toml
kernel/.claude/agents/: evaluator.md  planner.md
kernel/.claude/commands/: harness.md
kernel/canonical/: fields.yaml  model.py
kernel/extract/: compare_483.py
kernel/pipeline/: compute.py  critic.py  evaluate.py  extract.py  ocr.py  pivot.py  run.py
kernel/profiles/: pipe_fitters_537.yaml  sprinkler_fitters_281.yaml  sprinkler_fitters_483.yaml  sprinkler_fitters_821.yaml
kernel/tests/: test_critic.py  test_regression.py  test_rounding.py
ui/: .gitignore  (+6 more)
(+281 files in other folders)
