[project]
name = "labor-aid-poc"
version = "0.1.0"
description = "Generic CBA -> canonical ratesheet extraction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber",
    "openpyxl",
    "pandas",
    "pyyaml",
    "pypdfium2",
    "rapidocr-onnxruntime",
    "Pillow",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
