[project]
name = "laboraid-improver-agent"
version = "0.1.0"
description = "LaborAid ImproverAgent — Strands agent on AgentCore that applies reviewer corrections (overrides + comments) into a new rate-sheet version"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=0.1.0",
    "bedrock-agentcore>=0.1.0",
    "boto3>=1.34.0",
    "pypdf>=4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
